--- a/tosch.tech/package.json
+++ b/tosch.tech/package.json
@@ -45,7 +45,8 @@
       "google",
       "@vue/prettier"
     ],
-    "rules": {},
+    "rules": {
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     },
