--- a/tosch.tech/package.json
+++ b/tosch.tech/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.4.1",
     "lato-font": "^3.0.0",
     "material-icons": "^0.3.1",
+    "moment": "^2.24.0",
     "pikaday": "^1.8.0",
     "popper.js": "^1.16.0",
     "vue": "^2.6.10",
