--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ cache: npm
 script: npm run build
 
 after_success:
-  'curl --user $FTP_USER:$FTP_PASSWORD -T {"index.html"} ftp://e113743-ftp.services.easyname.eu/web/
+  'curl --user $FTP_USER:$FTP_PASSWORD -T {"dist/index.html"} ftp://e113743-ftp.services.easyname.eu/web/
   '
