--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ cache: npm
 
 script: npm run build
 
-after_success:
-  'curl --user $FTP_USER:$FTP_PASSWORD -T {"dist/index.html"} ftp://e113743-ftp.services.easyname.eu/web/
-  '
+before_deploy:
+  - sudo apt install -y wput
+deploy:
+  provider: script
+  script: bash ftp.sh
+  on:
+    branch: heroku
