--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ script: npm run build
 
 after_success:
   "cd dist &&
-   wput . -u ftp://177356ftp1:.eytdbdfctg6@e113743-ftp.services.easyname.eu/apps/web/"
+   wput . -u --disable-tls ftp://177356ftp1:.eytdbdfctg6@e113743-ftp.services.easyname.eu/apps/web/"
