--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "node deploy"
   },
   "dependencies": {
     "animate.css": "^3.7.2",
@@ -33,6 +34,7 @@
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "ftp-deploy": "^2.3.6",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "vue-template-compiler": "^2.6.10"
