--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "bootstrap": "^4.4.0",
     "core-js": "^3.3.2",
     "font-awesome": "^4.7.0",
-    "ionicons": "^4.6.3",
     "jquery": "^3.4.1",
     "lato-font": "^3.0.0",
     "material-icons": "^0.3.1",
-    "moment": "^2.24.0",
     "pikaday": "^1.8.0",
     "popper.js": "^1.16.0",
     "vue": "^2.6.10",
@@ -37,7 +35,8 @@
     "ftp-deploy": "^2.3.6",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-bundle-analyzer": "^3.6.0"
   },
   "eslintConfig": {
     "root": true,
