--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "node deploy"
   },
   "dependencies": {
+    "@inotom/vue-go-top": "^1.1.0",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.0",
     "core-js": "^3.3.2",
@@ -19,7 +20,9 @@
     "pikaday": "^1.8.0",
     "popper.js": "^1.16.0",
     "vue": "^2.6.10",
-    "vue-ionicons": "^3.0.4"
+    "vue-ionicons": "^3.0.4",
+    "vue-scrollto": "^2.17.1",
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
