--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@inotom/vue-go-top": "^1.1.0",
     "animate.css": "^3.7.2",
-    "bootstrap": "^4.4.0",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.1.0",
     "core-js": "^3.3.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
@@ -22,7 +23,8 @@
     "vue": "^2.6.10",
     "vue-ionicons": "^3.0.4",
     "vue-scrollto": "^2.17.1",
-    "vuelidate": "^0.7.4"
+    "vuelidate": "^0.7.4",
+    "portal-vue": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
